--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
 <body>
 
 
+<!-- Sprite делается для того чтоб менять размеры и цвета иконок в СВГ формате скачаных с сайта-->
+	<svg style="display:none;">
+		
+		<symbol id="facebook" viewBox="-110 1 511 511.99896">
+			<g>
+				<path d="m207.363281 126.734375c.699219-.789063 3.96875-3.367187 16.808594-3.367187l42.097656-.015626c13.695313 0 24.832031-11.140624 24.832031-24.835937v-73.578125c0-13.671875-11.121093-24.8125-24.792968-24.835938l-62.53125-.101562c-38.59375 0-71.402344 12.730469-94.878906 36.820312-23.371094 23.980469-35.726563 57.457032-35.726563 96.804688v39.683594h-47.835937c-13.695313 0-24.835938 11.140625-24.835938 24.835937v79.242188c0 13.695312 11.140625 24.835937 24.835938 24.835937h47.835937v184.941406c0 13.695313 11.140625 24.835938 24.835937 24.835938h81.992188c13.695312 0 24.835938-11.140625 24.835938-24.835938v-184.9375h58.472656c13.695312 0 24.832031-11.144531 24.832031-24.832031l.03125-79.246093c0-8.996094-4.894531-17.320313-12.777344-21.722657-3.652343-2.039062-7.902343-3.117187-12.285156-3.117187h-58.273437v-31.351563c0-10.21875 1.375-13.917969 2.527343-15.222656zm0 0"/>
+			</g>
+		</symbol>
+
+		<symbol id="twitter" viewBox="0 0 512 512">
+			<g>
+				<path d="M512,97.248c-19.04,8.352-39.328,13.888-60.48,16.576c21.76-12.992,38.368-33.408,46.176-58.016
+							c-20.288,12.096-42.688,20.64-66.56,25.408C411.872,60.704,384.416,48,354.464,48c-58.112,0-104.896,47.168-104.896,104.992
+							c0,8.32,0.704,16.32,2.432,23.936c-87.264-4.256-164.48-46.08-216.352-109.792c-9.056,15.712-14.368,33.696-14.368,53.056
+							c0,36.352,18.72,68.576,46.624,87.232c-16.864-0.32-33.408-5.216-47.424-12.928c0,0.32,0,0.736,0,1.152
+							c0,51.008,36.384,93.376,84.096,103.136c-8.544,2.336-17.856,3.456-27.52,3.456c-6.72,0-13.504-0.384-19.872-1.792
+							c13.6,41.568,52.192,72.128,98.08,73.12c-35.712,27.936-81.056,44.768-130.144,44.768c-8.608,0-16.864-0.384-25.12-1.44
+							C46.496,446.88,101.6,464,161.024,464c193.152,0,298.752-160,298.752-298.688c0-4.64-0.16-9.12-0.384-13.568
+							C480.224,136.96,497.728,118.496,512,97.248z"/>
+			</g>
+		</symbol>
+
+		<symbol id="linkedin" viewBox="0 0 512 512">
+			<g>
+				<path d="m475.074219 0h-438.148438c-20.394531 0-36.925781 16.53125-36.925781 36.925781v438.148438c0 20.394531 16.53125 36.925781 36.925781 36.925781h438.148438c20.394531 0 36.925781-16.53125 36.925781-36.925781v-438.148438c0-20.394531-16.53125-36.925781-36.925781-36.925781zm-293.464844 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0"/>
+			</g>	
+		</symbol>
+
+	</svg>
+
 <!-- Header-->
 
 	<header class="header">
@@ -152,8 +182,147 @@
 				<div class="works__text">User Interface Design</div>
 			</div>
 		</div>
-
 	</div>
+
+
+	<!-- Team -->
+	<div class="team">
+		<div class="container">
+			<div class="team__inner">
+
+				<div class="team__item">
+					<img class="team__photo" src="img/team/team-1.jpg" alt="">
+					<div class="team__name">Ruth Woods</div>
+					<div class="team__prof">Founder, CEO</div>
+					<div class="team__text">
+						<p> Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+						<p>Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+					</div>
+					<div class="social">
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#facebook"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#twitter"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#linkedin"></use>
+							</svg>
+						</a>
+						
+					</div>
+
+				</div>
+
+				<div class="team__item">
+					<img class="team__photo" src="img/team/team-2.jpg" alt="">
+					<div class="team__name">Timothy Reed</div>
+					<div class="team__prof">Co-Founder, Developer</div>
+					<div class="team__text">
+						<p> Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+						<p>Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+					</div>
+					<div class="social">
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#facebook"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#twitter"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#linkedin"></use>
+							</svg>
+						</a>
+					</div>
+				</div>
+
+				<div class="team__item">
+					<img class="team__photo" src="img/team/team-3.jpg" alt="">
+					<div class="team__name">Victoria Valdez</div>
+					<div class="team__prof">UI Designer</div>
+					<div class="team__text">
+						<p> Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+						<p>Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+					</div>
+					<div class="social">
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#facebook"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#twitter"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#linkedin"></use>
+							</svg>
+						</a>
+					</div>
+				</div>
+
+				<div class="team__item">
+					<img class="team__photo" src="img/team/team-4.jpg" alt="">
+					<div class="team__name">Beverly Little</div>
+					<div class="team__prof">Data Scientist</div>
+					<div class="team__text">
+						<p> Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+						<p>Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+					</div>
+					<div class="social">
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#facebook"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#twitter"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#linkedin"></use>
+							</svg>
+						</a>
+					</div>
+				</div>
+
+			</div><!-- /Team_inner-->
+		</div><!-- /Container-->
+	</div><!-- /team-->
+
+
+
+	<!-- Testimonials -->
+
+	<div class="reviews">
+		<div class="container">
+
+			<div class="reviews__item">
+				<div class="reviews__photo">
+					<img class="reviews__image" src="img/reviews/review-1.jpg" alt="">
+				</div>
+				<div class="reviews__content">
+					<div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
+					<div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+				</div>
+			</div>
+
+		</div><!-- /Container-->
+	</div>  <!--/reviews-->
 
 </body>
 </html>
