--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 	<title>ActiveBox</title>
 </head>
@@ -323,6 +323,77 @@
 
 		</div><!-- /Container-->
 	</div>  <!--/reviews-->
+
+	<!-- Download -->
+
+	<div class="download">
+		<div class="container">
+			<h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
+			<div class="download__text">
+				<p>Fusce dapibus, tellus ac cursus commodo</p>
+			</div>
+			<a class="btn btn--red btn--long" href="#">Download Here</a>
+		</div>
+	</div>
+
+
+<!-- Footer -->
+
+	<footer class="footer">
+		<div class="container">
+
+			<div class="footer__inner">
+				<div class="footer__block">
+					<h4 class="footer__title">Location</h4>
+					<address class="footer__address">
+						<div>3481 Melrose Place</div>
+						<div> Beverly Hills, CA 90210</div>
+					</address>
+				</div>
+
+				<div class="footer__block">
+					<h4 class="footer__title">Share with Love</h4>
+					<div class="social social--footer">
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#facebook"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#twitter"></use>
+							</svg>
+						</a>
+						<a class="social__item" href="#" target="_blank">
+							<svg class="social__icon">
+								<use xlink:href="#linkedin"></use>
+							</svg>
+						</a>
+						
+					</div>
+				</div>
+
+				<div class="footer__block">
+					<h4 class="footer__title">About ActiveBox</h4>
+					<div class="footer__text">
+						<div>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</div>
+						
+					</div>
+				</div>
+
+				</div><!--/footer__inner-->
+			</div><!--/container-->
+			<div class="copyright">
+				<div class="container">
+					<div class="copyright__text">
+						<div>Copyright © 2015 ActiveBox. All Rights Reserved</div> 
+						<div>Made <span>by Kamal Chaneman</span> </div>
+				</div>
+				</div>
+			</div>
+	</footer>
+
+
 
 </body>
 </html>
