--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--сайт принимает ширину дивайса. Initial-scale=1 - сайт по умолчанию загружается в оригинальном размере но его можно приближать(скролить)-->
 	<title>ActiveBox</title>
 </head>
 <body>
@@ -47,6 +48,7 @@
 				<div class="header__logo">
 					<img src="img/ActiveBox.png" alt="logo">
 				</div>
+
 				<nav class="nav">
 					<a class="nav__link" href="#"> Features</a>
 					<a class="nav__link" href="#"> Works</a>
@@ -54,6 +56,11 @@
 					<a class="nav__link" href="#"> Testimonials</a>
 					<a class="nav__link" href="#"> Download</a>
 				</nav>
+
+				<button class="burger" type="button">
+					<span class="burger__item">Menu</span>
+				</button>
+
 			</div>
 		</div>
 	</header>
