--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--сайт принимает ширину дивайса. Initial-scale=1 - сайт по умолчанию загружается в оригинальном размере но его можно приближать(скролить)-->
 	<title>ActiveBox</title>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -42,7 +44,7 @@
 
 <!-- Header-->
 
-	<header class="header">
+	<header class="header" id="header">
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
@@ -67,7 +69,7 @@
 
 <!-- Intro-->
 
-	<div class="intro">
+	<div class="intro" id="intro">
 		<div class="container">
 			<div class="intro__inner">
 				<h1 class="intro__title"> Your Favorite One Page Multi Purpose Template </h1>
@@ -401,6 +403,8 @@
 	</footer>
 
 
+		<!--JavaScript-->
+<script src="app.js"></script>
 
 </body>
 </html>
