--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Open+Sans:wght@700&family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--сайт принимает ширину дивайса. Initial-scale=1 - сайт по умолчанию загружается в оригинальном размере но его можно приближать(скролить)-->
 	<title>ActiveBox</title>
 
@@ -51,15 +52,15 @@
 					<img src="img/ActiveBox.png" alt="logo">
 				</div>
 
-				<nav class="nav">
-					<a class="nav__link" href="#"> Features</a>
-					<a class="nav__link" href="#"> Works</a>
-					<a class="nav__link" href="#"> Our Team</a>
-					<a class="nav__link" href="#"> Testimonials</a>
-					<a class="nav__link" href="#"> Download</a>
+				<nav class="nav" id="nav">
+					<a class="nav__link" href="#" data-scroll="#features"> Features</a>
+					<a class="nav__link" href="#" data-scroll="#works"> Works</a>
+					<a class="nav__link" href="#" data-scroll="#team"> Our Team</a>
+					<a class="nav__link" href="#" data-scroll="#reviews"> Testimonials</a>
+					<a class="nav__link" href="#" data-scroll="#download"> Download</a>
 				</nav>
 
-				<button class="burger" type="button">
+				<button class="burger" type="button" id="navToggle">
 					<span class="burger__item">Menu</span>
 				</button>
 
@@ -83,7 +84,7 @@
 
 	<!-- Features-->
 
-	<div class="container">
+	<div class="container" id="features">
 		<div class="features">
 			<div class="features__item">
 				<img class="features__icon" src="img/features/feature-1.png" alt="">
@@ -127,7 +128,7 @@
 	<!-- Works -->
 
 
-	<div class="works">
+	<div class="works" id="works">
 		<div class="works__item">
 			<img class="works__photo" src="img/works/work-1.jpg" alt="">
 			<div class="works__content">
@@ -195,11 +196,10 @@
 
 
 	<!-- Team -->
-	<div class="team">
+	<div class="team" id="team">
 		<div class="container">
 			<div class="team__inner">
-
-				<div class="team__item">
+					<div class="team__item">
 					<img class="team__photo" src="img/team/team-1.jpg" alt="">
 					<div class="team__name">Ruth Woods</div>
 					<div class="team__prof">Founder, CEO</div>
@@ -223,9 +223,7 @@
 								<use xlink:href="#linkedin"></use>
 							</svg>
 						</a>
-						
 					</div>
-
 				</div>
 
 				<div class="team__item">
@@ -316,26 +314,45 @@
 
 
 	<!-- Testimonials -->
+	
+			<div class="reviews" id="reviews">
+				<div class="container">
 
-	<div class="reviews">
-		<div class="container">
+					<div class="reviews__slider" id="reviewsSlider">
+						<div class="slick-item">
+							<div class="reviews__item">
+								<div class="reviews__photo">
+									<img class="reviews__image" src="img/reviews/review-1.jpg" alt="">
+								</div>
+								<div class="reviews__content">
+									<div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
+									<div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+								</div>
+							</div>
+						</div>
 
-			<div class="reviews__item">
-				<div class="reviews__photo">
-					<img class="reviews__image" src="img/reviews/review-1.jpg" alt="">
-				</div>
-				<div class="reviews__content">
-					<div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
-					<div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+						<div class="slick-item">
+							<div class="reviews__item">
+								<div class="reviews__photo">
+									<img class="reviews__image" src="img/reviews/review-1.jpg" alt="">
+								</div>
+								<div class="reviews__content">
+									<div class="reviews__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+										consequat. </div>
+									<div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+								</div>
+							</div>
+						</div>
 				</div>
 			</div>
+		</div>
 
-		</div><!-- /Container-->
-	</div>  <!--/reviews-->
 
 	<!-- Download -->
 
-	<div class="download">
+	<div class="download" id="download">
 		<div class="container">
 			<h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
 			<div class="download__text">
@@ -404,6 +421,7 @@
 
 
 		<!--JavaScript-->
+		<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="app.js"></script>
 
 </body>
