--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--сайт принимает ширину дивайса. Initial-scale=1 - сайт по умолчанию загружается в оригинальном размере но его можно приближать(скролить)-->
+	
+	<!--Favicon-->
+
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+	<link rel="manifest" href="img/favicons/site.webmanifest">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+
+	<meta name="description" content="Описание страницы">
+	<meta name="keywords" content="Создание сайтов, верстка сайтов">
+	<meta name="google" content="notranslate">
 	<title>ActiveBox</title>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
